--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="aboutus.html">About Us</a></li>
+					<li><a href="research.html">Our Research</a></li>
 					<li><a href="elements.html">Infographics</a></li>
 				</ul>
 			</nav>
