--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About Us</title>
+		<title>Our Research</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="images/QSlogo.png">
@@ -48,27 +48,17 @@
 							<header class="align-center">
 
 								<p>Mentoring in Medicine and Lab 19: Quantum Solutions</p>
-								<h2>Who Are We and What Do We Do?</h2>
-								<span class="image left"><img src="images/mim.jpg" alt="" width=250; height=250/></span>
+								<h2>Our Research Focus</h2>
+								<span class="image left"><img src="shield.png" alt="" width=250; height=250/></span>
 
 							</header><br>
-							<h3> <u> About Mentoring in Medicine </u> </h3>
+							<h3> <u> What Are We Researching? </u> </h3>
 							<p>
-								<b> Mentoring in Medicine </b> is a <b> non-profit organization </b> that allows <b> under-privileged students to become healthcare professionals </b> through educational activities related to the medical field.
-								MIM extends opportunities to students from elementary school to graduate school, allowing <b>students of all ages</b> to <b>attain their aspirations.</b>
-								<br><br>MIM creates an assortment of age-appropriate programs which introduces students to hospital and research environments, provides parent training, coaches students on leadership and life skills, and provides them academic enrichment. Most importantly, MIM allows students the confidence to bring forward their ideas and succeed in their ambitions.
+								Our team's research focus is centered on the <b> impact of COVID-19 on educators </b>. <br>
+								We want to see how quarantine and remote learning has affected teachers' academic experience,
+								from their teaching methods, to how their students' attendance and performance have changed due to the pandemic.
 							</p>
 							<br><br>
-
-							<span class="image right"><img src="images/smallLogo.png" alt=""width=200; height=250/></span>
-							<h3> <u> About Lab 19: Quantum Solutions </u> </h3>
-							<p>
-							<b>Lab 19: Quantum Solutions</b> is one of the 26 primary teams formed during Mentoring in Medicine's virtual research internship.
-							Our team consists of all students from middle school to graduate school.<br>
-							Our research topic <b> looks at the impact of COVID-19 on education, in the teachers' perspective. </b>
-							We hope to draw meaningful connections between <b>remote learning and its effect on academic experience for educators.</b>
-							<br><br> If you are an educator, or know an educator, please share our survey! Your help means so much to us, and we truly appreciate it.
-						</p>
 
 
 					</div>
