Added research info

--- a/research.html
+++ b/research.html
@@ -35,7 +35,8 @@
 				<div class="inner">
 					<header class="align-center">
 						<p>Lab 19: Quantum Solutions</p>
-						<h2>About Us</h2>
+						<h2>Our Research Focus</h2>
+						<h3> The Impact of COVID-19 on Educators </h3>
 					</header>
 				</div>
 			</section>
@@ -47,18 +48,20 @@
 						<div class="content">
 							<header class="align-center">
 
-								<p>Mentoring in Medicine and Lab 19: Quantum Solutions</p>
-								<h2>Our Research Focus</h2>
-								<span class="image left"><img src="shield.png" alt="" width=250; height=250/></span>
-
+							<span class="image right"><img src="images/apple.jpg" alt="" width=400; height=250/></span>
 							</header><br>
 							<h3> <u> What Are We Researching? </u> </h3>
 							<p>
-								Our team's research focus is centered on the <b> impact of COVID-19 on educators </b>. <br>
-								We want to see how quarantine and remote learning has affected teachers' academic experience,
-								from their teaching methods, to how their students' attendance and performance have changed due to the pandemic.
+								Our team's research focus is centered on the <b> impact of COVID-19 on educators. </b> <br>
+								We want to see how quarantine and remote learning has affected teachers' academic experience, across the country and all around the world. <br>
+								How have their <b> teaching methods </b> changed? <br>
+								How have their <b> students' attendance and performance </b> have changed? <br>
+								How has their <b> lifestyle </b> changed? <br>
 							</p>
-							<br><br>
+
+							<h3> Educators: We Need Your Help. Your voice is invaluable. </h3>
+							<p> Teachers, professors, and teaching assistants alike: we'd love to hear your input on how remote learning has affected <u> your </u> teaching experience. Please consider taking this short, 5-7 minute survey down below: </p>
+							<a href="bit.ly/qsolutions19" class="button special">Survey: The Impact of COVID-19 on Educators</a>
 
 
 					</div>
