Links open in new tab, font color changed

--- a/aboutus.html
+++ b/aboutus.html
@@ -67,7 +67,9 @@
 							Our team consists of all students from middle school to graduate school.<br>
 							Our research topic <b> looks at the impact of COVID-19 on education, in the teachers' perspective. </b>
 							We hope to draw meaningful connections between <b>remote learning and its effect on academic experience for educators.</b>
-							<br><br> If you are an educator, or know an educator, please share our survey! Your help means so much to us, and we truly appreciate it.
+							<br><br> If you are an educator, or know an educator, please share our <a href="https://bit.ly/qsolutions19" target="_blank">survey!</a> 
+
+							<br> Your help means so much to us, and we truly appreciate it.
 						</p>
 
 
