--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							</h4>
 
 							<br>
-							<a href="http://bit.ly/qsolutions19" class="button">Take our survey here!</a>
+							<a href="http://bit.ly/qsolutions19" class="button" target="_blank">Take our survey here!</a>
 						</header>
 					</div>
 				</article>
