--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<strong>To all educators:<br>
 								Have your voice heard. Help us make a difference.</strong> <br>
 								Shine light on how COVID-19 has impacted you and <br>
-								the education system by taking this short survey:
+								the education system by taking this short, confidential survey:
 							</h4>
 
 							<br>
