--- a/research.html
+++ b/research.html
@@ -59,11 +59,10 @@
 								How has their <b> lifestyle </b> changed? <br>
 							</p>
 
-							<h3> Educators: We Need Your Help. Your voice is invaluable. </h3>
-							<p> Teachers, professors, and teaching assistants alike: we'd love to hear your input on how remote learning has affected <u> your </u> teaching experience. Please consider taking this short, 5-7 minute survey down below: </p>
+							<h3> Educators: We Need Your Help. Your Voice is <b> Invaluable </b>. </h3>
+							<p> Teachers, professors, and teaching assistants alike: we'd love to hear your input on how remote learning has affected <u> your </u> teaching experience. Please consider taking this short, confidential 5-7 minute survey down below: </p>
 							<a href="bit.ly/qsolutions19" class="button special" target="_blank">
 								Survey: The Impact of COVID-19 on Educators</a>
-
 
 					</div>
 				</div>
