Created infographics file

--- a/infographics.html
+++ b/infographics.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Our Research</title>
+		<title>Infographics</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="images/QSlogo.png">
@@ -35,8 +35,8 @@
 				<div class="inner">
 					<header class="align-center">
 						<p>Lab 19: Quantum Solutions</p>
-						<h2>Our Research Focus</h2>
-						<h3> The Impact of COVID-19 on Educators </h3>
+						<h2>Gallery: Infographics</h2>
+
 					</header>
 				</div>
 			</section>
@@ -48,21 +48,8 @@
 						<div class="content">
 							<header class="align-center">
 
-							<span class="image right"><img src="images/apple.jpg" alt="" width=400; height=250/></span>
 							</header><br>
-							<h3> <u> What Are We Researching? </u> </h3>
-							<p>
-								Our team's research focus is centered on the <b> impact of COVID-19 on educators. </b> <br>
-								We want to see how quarantine and remote learning has affected teachers' academic experience, across the country and all around the world. <br>
-								How have their <b> teaching methods </b> changed? <br>
-								How have their <b> students' attendance and performance </b> have changed? <br>
-								How has their <b> lifestyle </b> changed? <br>
-							</p>
-
-							<h3> Educators: We Need Your Help. Your Voice is <b> Invaluable </b>. </h3>
-							<p> Teachers, professors, and teaching assistants alike: we'd love to hear your input on how remote learning has affected <u> your </u> teaching experience. Please consider taking this short, confidential 5-7 minute survey down below: </p>
-							<a href="bit.ly/qsolutions19" class="button special" target="_blank">
-								Survey: The Impact of COVID-19 on Educators</a>
+							<!-- <h3> <u> Infographics </u> </h3> -->
 
 					</div>
 				</div>
