--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="aboutus.html">About Us</a></li>
 					<li><a href="research.html">Our Research</a></li>
-					<li><a href="elements.html">Infographics</a></li>
+					<li><a href="infographics.html">Infographics</a></li>
 				</ul>
 			</nav>
 
