--- a/infographics.html
+++ b/infographics.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Hielo by TEMPLATED
+	Hielo by TEMPLATED, Visualize by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
@@ -48,9 +48,62 @@
 						<div class="content">
 							<header class="align-center">
 
-							</header><br>
-							<!-- <h3> <u> Infographics </u> </h3> -->
+								<section class="thumbnails">
+									<div>
+										<a href="infographics/info8.png"><img src="infographics/info8.png" alt="" />
+										<h3>The Pros vs. Cons of E-Learning</h3>
+										</a>
 
+										<a href="infographics/info1.png"><img src="infographics/info1.png" alt="" />
+										<h3>The Best Ways to Protect Yourself from COVID-19</h3>
+										</a>
+
+									</div>
+
+									<div>
+										<a href="infographics/info6.png"><img src="infographics/info6.png" alt="" />
+										<h3>4 Ways COVID-19 Impacts Educators</h3>
+										</a>
+
+										<a href="infographics/info5.png"><img src="infographics/info5.png" alt="" />
+											<h3>Activity Risk Levels During COVID-19</h3>
+										</a>
+
+										<a href="infographics/info9.png"><img src="infographics/info9.png" alt="" />
+										<h3>How to Stay Physically Active During Quarantine</h3>
+										</a>
+
+									</div>
+
+									<div>
+										<a href="infographics/info7.png"><img src="infographics/info7.png" alt="" />
+										<h3>COVID-19: A General Overview</h3>
+										</a>
+
+										<a href="infographics/info2.png"><img src="infographics/info2.png" alt="" />
+										<h3>How to Protect Yourself During Protests</h3>
+										</a>
+
+										<a href="infographics/info10.png"><img src="infographics/info10.png" alt="" />
+										<h3>Effectiveness of Different Face Masks</h3>
+										</a>
+									</div>
+
+									<div>
+										<a href="infographics/info4.png"><img src="infographics/info4.png" alt="" />
+										<h3>E-Learning Towards K-12 and College Students</h3>
+										</a>
+
+										<a href="infographics/info3.png"><img src="infographics/info3.png" alt="" />
+										<h3>The Effect of COVID-19 on Education</h3>
+										</a>
+									</div>
+
+								</section>
+
+
+
+						</header>
 					</div>
 				</div>
 			 </section>
