--- a/infographics.html
+++ b/infographics.html
@@ -42,6 +42,8 @@
 			</section>
 
 		<!-- Two -->
+		<section id="main">
+
 			<section id="two" class="wrapper style2">
 				<div class="inner">
 					<div class="box">
@@ -90,6 +92,7 @@
 									</div>
 
 									<div>
+										<!-- I need the Canva version of this -->
 										<a href="infographics/info4.png"><img src="infographics/info4.png" alt="" />
 										<h3>E-Learning Towards K-12 and College Students</h3>
 										</a>
@@ -100,13 +103,11 @@
 									</div>
 
 								</section>
-
-
-
 						</header>
 					</div>
 				</div>
 			 </section>
+		 </section>
 
 		<!-- Footer -->
 			<footer id="footer">
@@ -126,6 +127,7 @@
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
