--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 					<li><a href="aboutus.html">About Us</a></li>
 					<li><a href="research.html">Our Research</a></li>
 					<li><a href="infographics.html">Infographics</a></li>
+					<li><a href="videos.html">Videos</a></li>
+
 				</ul>
 			</nav>
 
