--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<p></p>
 							<br>
 
-							<h4>
+							<!-- <h4>
 								As a team of interns for Mentoring in Medicine, our lab <br>
 								is focused on looking at the <strong>impact of COVID-19 <br>
 								on educators across America.</strong>
@@ -57,21 +57,22 @@
 								the education system by taking this short, confidential survey:
 							</h4>
 
-							<br>
-							<a href="http://bit.ly/qsolutions19" class="button" target="_blank">Take our survey here!</a>
+							<br> -->
+							<a href="http://bit.ly/qsolutions19" class="button special" target="_blank">Take our survey here!</a>
 						</header>
 					</div>
 				</article>
 
-				<!-- <article>
+				<article>
 					<img src="images/slide01.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>Educators: help us make a difference today.</p>
-							<h2>Take our survey here!</h2>
+							<p>Educators: help us make a difference today.</p><br> Help us.
+							<h2>[testing]</h2>
+							<a href="http://bit.ly/qsolutions19" class="button special" target="_blank">Take our survey here!</a>
 						</header>
 					</div>
-				</article> -->
+				</article>
 				<!-- <article>
 					<img src="images/slide02.jpg"  alt="" />
 					<div class="inner">
