--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Hielo by TEMPLATED, Visualize by TEMPLATED
+	Hielo by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
@@ -41,9 +41,9 @@
 					<div class="inner">
 						<header>
 							<br><br>
-							<p>We turn theoretical solutions into practical solutions. <a href="https://templated.co"></a></p>
+							<p>We turn theoretical solutions into practical solutions.</p>
 							<h2>Quantum Solutions</h2>
-							<p></p>
+							
 							<br>
 
 							<!-- <h4>
@@ -149,20 +149,14 @@
 			</section> -->
 
 		<!-- Two -->
-			<!-- <section id="two" class="wrapper style3">
+			<section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
 						<p>Contact Us!</p> -->
-						<!-- <h2>Morbi maximus justo</h2> -->
-						<!-- <ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
+						<h2>Morbi maximus justo</h2>
 					</header>
 				</div>
-			</section> -->
+			</section>
 
 		<!-- Three -->
 			<!-- <section id="three" class="wrapper style2">
