--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Mentoring in Medicine: Lab 19</a></div>
+				<div class="logo"><a href="index.html"><h5>Mentoring in Medicine: Lab 19</h5></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -40,24 +40,10 @@
 					<img src="images/slide00.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<br><br>
+
 							<p>We turn theoretical solutions into practical solutions.</p>
 							<h2>Quantum Solutions</h2>
-							
-							<br>
 
-							<!-- <h4>
-								As a team of interns for Mentoring in Medicine, our lab <br>
-								is focused on looking at the <strong>impact of COVID-19 <br>
-								on educators across America.</strong>
-						 <br><br><br>
-								<strong>To all educators:<br>
-								Have your voice heard. Help us make a difference.</strong> <br>
-								Shine light on how COVID-19 has impacted you and <br>
-								the education system by taking this short, confidential survey:
-							</h4>
-
-							<br> -->
 							<a href="http://bit.ly/qsolutions19" class="button special" target="_blank">Take our survey here!</a>
 						</header>
 					</div>
