--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html"><h5>Mentoring in Medicine: Lab 19</h5></a></div>
+				<div class="logo"><a href="index.html"> MIM: Lab 19</a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -44,53 +44,14 @@
 							<p>We turn theoretical solutions into practical solutions.</p>
 							<h2>Quantum Solutions</h2>
 
-							<a href="http://bit.ly/qsolutions19" class="button special" target="_blank">Take our survey here!</a>
+							<!-- <a href="http://bit.ly/qsolutions19" class="button special" target="_blank">Take our survey here!</a> -->
 						</header>
 					</div>
 				</article>
-
-				<article>
-					<img src="images/slide01.jpg" alt="" />
-					<div class="inner">
-						<header>
-							<p>Educators: help us make a difference today.</p><br> Help us.
-							<h2>[testing]</h2>
-							<a href="http://bit.ly/qsolutions19" class="button special" target="_blank">Take our survey here!</a>
-						</header>
-					</div>
-				</article>
-				<!-- <article>
-					<img src="images/slide02.jpg"  alt="" />
-					<div class="inner">
-						<header>
-							<p>Sed cursus aliuam veroeros lorem ipsum nullam</p>
-							<h2>Tempus dolor</h2>
-						</header>
-					</div>
-				</article> -->
-				<!-- <article>
-					<img src="images/slide04.jpg"  alt="" />
-					<div class="inner">
-						<header>
-							<p>Adipiscing lorem ipsum feugiat sed phasellus consequat</p>
-							<h2>Etiam feugiat</h2>
-						</header>
-					</div>
-				</article>
-				<article>
-					<img src="images/slide05.jpg"  alt="" />
-					<div class="inner">
-						<header>
-							<p>Ipsum dolor sed magna veroeros lorem ipsum</p>
-							<h2>Lorem adipiscing</h2>
-						</header>
-					</div>
-				</article> -->
-
 			</section>
 
 		<!-- One -->
-			<!-- <section id="one" class="wrapper style2">
+			<section id="one" class="wrapper style2">
 				<div class="inner">
 					<div class="grid-style">
 
@@ -132,7 +93,7 @@
 
 					</div>
 				</div>
-			</section> -->
+			</section>
 
 		<!-- Two -->
 			<section id="two" class="wrapper style3">
@@ -143,39 +104,6 @@
 					</header>
 				</div>
 			</section>
-
-		<!-- Three -->
-			<!-- <section id="three" class="wrapper style2">
-				<div class="inner">
-					<header class="align-center">
-						<p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
-					</header>
-					<div class="gallery">
-						<div>
-							<div class="image fit">
-								<a href="#"><img src="images/pic01.jpg" alt="" /></a>
-							</div>
-						</div>
-						<div>
-							<div class="image fit">
-								<a href="#"><img src="images/pic02.jpg" alt="" /></a>
-							</div>
-						</div>
-						<div>
-							<div class="image fit">
-								<a href="#"><img src="images/pic03.jpg" alt="" /></a>
-							</div>
-						</div>
-						<div>
-							<div class="image fit">
-								<a href="#"><img src="images/pic04.jpg" alt="" /></a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section> -->
-
 
 		<!-- Footer -->
 			<footer id="footer">
