update banner to fit mobile

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 					<div class="inner">
 						<header>
 
-							<p>We turn theoretical solutions into practical solutions.</p>
+							<p>We turn the theoretical into the practical.</p>
 							<h2>Quantum Solutions</h2>
 
-							<!-- <a href="http://bit.ly/qsolutions19" class="button special" target="_blank">Take our survey here!</a> -->
+							<!--<a href="http://bit.ly/qsolutions19" class="button special" target="_blank">Take our survey here!</a> -->
 						</header>
 					</div>
 				</article>
