--- a/index.html
+++ b/index.html
@@ -56,17 +56,19 @@
 
 						<div>
 							<div class="box">
-								<div class="image fit">
-									<!-- <img src="images/pic02.jpg" alt="" /> -->
-								</div>
+								<!-- <div class="image fit">
+									<img src="images/pic02.jpg" alt="" />
+								</div> -->
 								<div class="content">
 									<header class="align-center">
 										<p>Calling all educators:</p>
 										<h2>Have your voice heard on how COVID-19 has impacted you.</h2>
 									</header>
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+									<p> Educators:
+									Your voice is important. Shine light on how COVID-19 has affected your life and the education system
+									by taking this short, 5-7 minute confidential survey! </p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="https://bit.ly/qsolutions19" class="button alt">The Impact of COVID-19 on Educators</a>
 									</footer>
 								</div>
 							</div>
@@ -74,18 +76,17 @@
 
 						<div>
 							<div class="box">
-								<div class="image fit">
-									<!-- <img src="images/pic03.jpg" alt="" /> -->
-								</div>
+								<!-- <div class="image fit">
+								</div> -->
 								<div class="content">
 									<header class="align-center">
 										<p>Make a difference today.</p>
 										<h2>Help support our research; share our survey far and wide!</h2>
 									</header>
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
-									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
-									</footer>
+									<p> As interns for Mentoring in Medicine, we hope to be able to draw connections between quarantine and
+									academic experience, in the educators' perspective. <br><br>
+									This can't be done without your help, however, so please
+								  share the survey with any other educators you know!</p>
 								</div>
 							</div>
 						</div>
