--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 			<section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Contact Us!</p> -->
-						<h2>Morbi maximus justo</h2>
+						<p>Look around!</p>
+						<h2>Check out the rest of our website for infographics and videos about COVID-19 and education!</h2>
 					</header>
 				</div>
 			</section>
