--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 
 							<p>We turn the theoretical into the practical.</p>
 							<h2>Quantum Solutions</h2>
+							<ul class="icons">
+							<li><a href="#one" class="icon fa-angle-down"></a></li>
+						</ul>
 
 						</header>
 					</div>
@@ -68,7 +71,7 @@
 									Your voice is important. Shine light on how COVID-19 has affected your life and the education system
 									by taking this short, 5-7 minute confidential survey! </p>
 									<footer class="align-center">
-										<a href="https://bit.ly/qsolutions19" class="button alt">The Impact of COVID-19 on Educators</a>
+										<a href="https://bit.ly/qsolutions19" class="button alt">The Impact of COVID-19 on Educators Survey</a>
 									</footer>
 								</div>
 							</div>
