--- a/aboutus.html
+++ b/aboutus.html
@@ -90,7 +90,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; MIM Lab 19: Quantum Solutions. All rights reserved.
+					&copy; MIM Lab 19: Quantum Solutions. Design: TEMPLATED. All rights reserved.
 				</div>
 			</footer>
 
