--- a/infographics.html
+++ b/infographics.html
@@ -48,7 +48,7 @@
 
 			<section id="two" class="wrapper style2">
 				<div class="inner">
-					<div class="box">
+					<!-- <div class="box"> -->
 						<div class="content">
 							<header class="align-center">
 
@@ -105,7 +105,7 @@
 								</section>
 						</header>
 					</div>
-				</div>
+				<!-- </div> -->
 			 </section>
 		 </section>
 
@@ -120,7 +120,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; MIM Lab 19: Quantum Solutions. All rights reserved.
+					&copy; MIM Lab 19: Quantum Solutions. Design: TEMPLATED. All rights reserved.
 				</div>
 			</footer>
 
