--- a/videos.html
+++ b/videos.html
@@ -45,17 +45,15 @@
 		<!-- Two -->
 		<section id="main">
 
-			<section id="two" class="wrapper style3">
+			<section id="two" class="wrapper style2">
 				<div class="inner">
-					<div class="box">
 						<div class="content">
 							<header class="align-center">
 
-								<section class="thumbnails">
+								<!-- <section class="thumbnails"> -->
 									<div>
-										<center>
+										<h4> Introduction to Quantum Solutions! </h4>
 										<iframe width="420" height="315" src="videos/intro.mp4"></iframe>
-										<h3>Introduction!</h3>
 									</div>
 
 									<!-- <div>
@@ -63,9 +61,8 @@
 										<h3>The Effect of Remote Learning on Education</h3>
 									</div> -->
 
-								</section>
+								<!-- </section> -->
 						</header>
-					</div>
 				</div>
 			 </section>
 		 </section>
@@ -81,7 +78,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; MIM Lab 19: Quantum Solutions. All rights reserved.
+					&copy; MIM Lab 19: Quantum Solutions. Design: TEMPLATED. All rights reserved.
 				</div>
 			</footer>
 
