--- a/videos.html
+++ b/videos.html
@@ -49,21 +49,12 @@
 				<div class="inner">
 						<div class="content">
 							<header class="align-center">
-
-								<!-- <section class="thumbnails"> -->
-									<div>
-										<h4> Introduction to Quantum Solutions! </h4>
-										<iframe width="420" height="315" src="videos/intro.mp4"></iframe>
-									</div>
-
-									<!-- <div>
-										<iframe width="420" height="315" src="videos/radio1.MOV"></iframe>
-										<h3>The Effect of Remote Learning on Education</h3>
-									</div> -->
-
-								<!-- </section> -->
+								<iframe width="420" height="315"src="https://www.youtube.com/watch?v=zCqLNMI8ZtE"></iframe>
+								<iframe width="420" height="315"src="https://www.youtube.com/watch?v=1UncOmHhu8s&t=2s"></iframe>
+								</section>
 						</header>
 				</div>
+			</div>
 			 </section>
 		 </section>
 
