--- a/videos.html
+++ b/videos.html
@@ -49,8 +49,8 @@
 				<div class="inner">
 						<div class="content">
 							<header class="align-center">
-								<iframe width="420" height="315"src="https://www.youtube.com/watch?v=zCqLNMI8ZtE"></iframe>
-								<iframe width="420" height="315"src="https://www.youtube.com/watch?v=1UncOmHhu8s&t=2s"></iframe>
+								<iframe width="420" height="315"src="https://www.youtube.com/embed/zCqLNMI8ZtE"> </iframe>
+								<iframe width="420" height="315"src="https://www.youtube.com/embed/1UncOmHhu8s"></iframe>
 								</section>
 						</header>
 				</div>
