--- a/videos.html
+++ b/videos.html
@@ -49,14 +49,14 @@
 				<div class="inner">
 						<div class="content">
 							<header class="align-center">
-								<iframe width="420" height="315"src="https://www.youtube.com/embed/zCqLNMI8ZtE"> </iframe>
-								<iframe width="420" height="315"src="https://www.youtube.com/embed/1UncOmHhu8s"></iframe>
+								<iframe width="350" height="250"src="https://www.youtube.com/embed/zCqLNMI8ZtE"> </iframe>
+								<iframe width="350" height="250"src="https://www.youtube.com/embed/1UncOmHhu8s"></iframe>
+								<iframe width="350" height="250"src="https://www.youtube.com/embed/ymJhbEBPltU"></iframe>
 								</section>
 						</header>
 				</div>
 			</div>
-			 </section>
-		 </section>
+	</section>
 
 		<!-- Footer -->
 			<footer id="footer">
