--- a/infographics.html
+++ b/infographics.html
@@ -86,6 +86,10 @@
 										<h5>The Effect of COVID-19 on Education</h5>
 										</a>
 
+										<a href="infographics/info11.png"><img src="infographics/info11.png" alt="" />
+										<h5>How To Stay Mentally Healthy Throughout Quarantine</h5>
+										</a>
+
 									</div>
 
 									<div>
