--- a/infographics.html
+++ b/infographics.html
@@ -104,6 +104,11 @@
 										<a href="infographics/info10.png"><img src="infographics/info10.png" alt="" />
 										<h5>Effectiveness of Different Face Masks</h5>
 										</a>
+
+										<a href="infographics/info12pi.png"><img src="infographics/info12pi.png" alt="" />
+										<h5>The Association of Sleep Health and Cognitive Decline</h5>
+										</a>
+										
 									</div>
 
 								</section>
