--- a/index.html
+++ b/index.html
@@ -39,13 +39,35 @@
 					<img src="images/slide00.jpg" alt="" />
 					<div class="inner">
 						<header>
-
 							<p>We turn the theoretical into the practical.</p>
 							<h2>Quantum Solutions</h2>
 							<ul class="icons">
 							<li><a href="#one" class="icon fa-angle-down"></a></li>
 						</ul>
-
+						</header>
+					</div>
+				</article>
+				<article>
+					<img src="images/slide02.jpg" alt="" />
+					<div class="inner">
+						<header>
+							<p>We turn the theoretical into the practical.</p>
+							<h2>Quantum Solutions</h2>
+							<ul class="icons">
+							<li><a href="#one" class="icon fa-angle-down"></a></li>
+						</ul>
+						</header>
+					</div>
+				</article>
+				<article>
+					<img src="images/slide03.jpg" alt="" />
+					<div class="inner">
+						<header>
+							<p>We turn the theoretical into the practical.</p>
+							<h2>Quantum Solutions</h2>
+							<ul class="icons">
+							<li><a href="#one" class="icon fa-angle-down"></a></li>
+						</ul>
 						</header>
 					</div>
 				</article>
